# 0a.io-v0

./: .gitignore  0a.cabal  archy.asc  artUpdate.sh  deploy.sh  mail.txt  music-for-work.archy  public-key  readme.md  reboot.sh  site.hs  stack.yaml  updateArtworkInfo.hs  watch.sh  zer0-degree.cabal  吖奇.txt  阿奇.txt  阿奇博爾德.txt
artwork-info/: 20 Pearls (A).md  Abstract Blue.md  Alta Pink.md  Aquel que camina delante.md  Aquél que camina delante.md  Back Fire.md  Bathyscaphe.md  Bicromia del cielo.md  Blossom.md  Blossoming Chestnut Branches.md  Burring Brook.md  Capri Battery.md  Cataract 3.md  Church Street El.md  Compenetração estática interior de uma cabeça = complementarismo congénito absoluto (SENSIBILIDADE LITHOGRAPHICA).md  Dutch Landscape.md  Every Brushstroke Has A Name.md  Flame Nebula.md  Fraction #8295.md  Franklin's Footpath.md  Harmonic Sculpture.md  Immortal Riding a Dragon.md  L'Ora X Clock.md  Licht-Relief.md  Man in a Bowler Hat.md  Moonlit Night.md  Mu.md  No dressing up they say.md  Not to Be Reproduced.md  Personal Values.md  Pont sylvestre (Rampe %25).md  Poppyseed Cake Glazed for Calypso.md  Room.md  Self-Portrait.md  Snow Fall at Kiyomizu Temple, Kyoto.md  Square Tops.md  Still Life with Grape Juice and Sandwiches.md  Stranger 2.md  Superposition et transparence.md  Supersition et transparence.md  (+14 more)
css/: font.css  fonts.css  highlight.scss  main.scss
js/: main.js  music-for-work.js
links/: 0a-explains-calculus.html  0a-explains-javascript-closure-and-design-patterns.html  0a-explains-set-theory-and-axiomatic-systems-with-pics-and-gifs.html  CNAME  (+21 more)
(+446 files in other folders)
