name:               zer0-degree
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.10.*
                  , directory
                  , text
                  , split
                  , regex-compat
  ghc-options:      -threaded
  default-language: Haskell2010
